# barc4sr

./: .gitattributes  .gitignore  README.md  pyproject.toml  setup.py
barc4sr/: aux_energy.py  aux_potpourri.py  aux_processing.py  aux_syned.py  aux_time.py  aux_utils.py  aux_wavefronts.py  bending_magnet.py  buffer.py  materials.py  power.py  processing.py  sr_bending_magnet.py  sr_classes.py  sr_undulator.py  sr_wiggler.py  undulator.py  utils.py  xoppy.py
docs/source/: barc4sr.rst  conf.py  index.rst  modules.rst
examples/: Dumas_et_al_Infrared_Phys_et_Tech_2006 .ipynb  Dumas_et_al_Infrared_Phys_et_Tech_2006.ipynb  README.md  bm_emission.ipynb  example_01 - undulator spectrum.ipynb  example_01.ipynb  example_02.ipynb  example_03.ipynb  example_A.ipynb  example_bm01 - bending magnet spectrum.ipynb  example_u01 - undulator spectrum.ipynb  example_u02 - undulator power density.ipynb  example_u03 - undulator emission.ipynb  example_u04 - undulator wavefront.ipynb  example_u05 - undulator tuning curve.ipynb  example_uA - generating undulator magnetic fields.ipynb
src/barc4sr/: __init__.py  _version.py  aux_common.py  aux_energy.py  aux_magnetic_fields.py  aux_plots.py  aux_processing.py  aux_rw.py  aux_syned.py  aux_time.py  aux_utils.py  aux_wavefronts.py  sr_arb_mag_field.py  sr_bending_magnet.py  sr_calculations.py  sr_classes.py  sr_undulator.py  sr_wiggler.py
src/barc4sr/backend/srw/: __init__.py  interface.py
src/barc4sr/backend/wofry/: interface.py
src/barc4sr/calculations/: __init__.py  coherence.py  radiation.py  rays.py  shared.py  trajectory.py
src/barc4sr/core/: electron_beam.py  energy.py  magnetic_fields.py  magnetic_structure.py  sources.py
src/barc4sr/io/: rw.py
src/barc4sr/plotting/: __init__.py  spatial.py  spectral.py  style.py  trajectory.py
src/barc4sr/processing/: power.py  wavefront.py
src/barc4sr/syned/: mapping.py
src/barc4sr/utils/: time.py
test/: batch_xoppy_power_density.py  batch_xoppy_spectrum.py  batch_xoppy_undulator_radiation.py  f_xoppy_power_density.py  f_xoppy_spectrum.py  f_xoppy_undulator_radiation.py
test/SR_sources/: syned_SOLEIL-II_HU64.json
