[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "barc4sr"
version = "2025.06.13"
description = "A Python package for Synchrotron Radiation calculations"
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE" }
authors = [
    { name = "Rafael Celestre", email = "rafael.celestre@synchrotron-soleil.fr" }
]
keywords = ["synchrotron", "radiation", "x-ray", "physics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]
dependencies = [
    "numpy>=1.20",
    "numba>=0.53.1",
    "scipy>=1.5.0",
    "joblib>=0.14.0",
    "h5py>=3.0.0",
    "matplotlib>=3.3.0",
    "Pillow>=7.0.0",
    "imageio>=2.9.0",
    "scikit-image>=0.17.2"
]

[tool.setuptools.packages.find]
where = ["src"]