[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "barc4sr"
version = "2025.11.28"
description = "A Python package for Synchrotron Radiation calculations"
readme = "README.md"
license = "CECILL-2.1"
authors = [{ name = "Rafael Celestre", email = "rafael.celestre@synchrotron-soleil.fr"}]
keywords = ["synchrotron", "radiation", "x-ray", "physics"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics"
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20",
    "numba>=0.53.1",
    "scipy>=1.5.0",
    "joblib>=0.14.0",
    "h5py>=3.0.0",
    "matplotlib>=3.3.0",
    "Pillow>=7.0.0",
    "imageio>=2.9.0",
    "scikit-image>=0.17.2",
    "srwpy"
]

[project.urls]
Homepage = "https://github.com/barc4/barc4sr"
Repository = "https://github.com/barc4/barc4sr"

[tool.setuptools.packages.find]
where = ["src"]